fix: horizontal scroll

--- a/apps/taysteer-frontend/src/components/profile/Profile.sass
+++ b/apps/taysteer-frontend/src/components/profile/Profile.sass
@@ -5,7 +5,7 @@ div.profile-container
   grid-template-areas: "name recipes-count" "login recipes" "description recipes" "image recipes"
   grid-template-columns: min(50vw, 500px) max(50vw, calc(100vw - 540px))
   grid-template-rows: min-content min-content min-content 1fr
-  padding: 40px
+  padding: 00px
 
   div.name
     font-size: 50px
